app/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: wordpress-ingress
  namespace: default
spec:
  rules:
  - host: wordpress.kendopz.com
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              name: https
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - wordpress.kendopz.com
    secretName: wordpress-tls-certificate
